# trust

./: .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt
api/: index.py
data/output/: clones.csv  clones.html  clones.json  gems.csv  gems.html  gems.json
design/: brandrank.html
docs/: brandrank-design-prompt.md  brandrank-draft.md  prosp-clone-draft.md
src/gemhunter/: __init__.py  __main__.py  cli.py  client.py  clone_report.py  clone_score.py  models.py  report.py  scoring.py
tests/: test_clone_score.py  test_gemhunter.py
