[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemhunter"
version = "0.1.0"
description = "Discover recently-founded startups already doing extremely well (gems to replicate) via the TrustMRR API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[project.scripts]
gemhunter = "gemhunter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gemhunter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
